<?xml version="1.0"?>
<package format="2">
  <name>ros_kafka_connector</name>
  <version>0.0.1</version>
  <description>The ros_kafka_connector package</description>

  <maintainer email="isakdiaz@gmail.com">Isak Diaz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>

  <!-- custom msgs  -->
  <build_depend>heron_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <exec_depend>heron_msgs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
